frontend/test/should_fail/cast_enum_types_exec.grg
using cast_model;

rule r {
	modify {
	---
		def var unrelENU:UnrelENU;
		exec ({
			unrelENU = (UnrelENU)ENU::c
		});
	}
}
